# lcs

./: .gitignore  README.md  lcs.py  pyproject.toml
lcs/: main.py
